fix: load assets from classpath and add currentUserProfile query
  - Move colors and avatar assets from src/main/java/ to src/main/resources/
    so they are packaged inside the JAR by Gradle
  - Refactor ColorsService and AvatarService to load catalogs and images
    via ClassPathResource instead of filesystem paths — fixes Avatar.colorHex
    returning null in Docker and packaged deployments
  - Remove stale asset COPY instruction from Dockerfile
  - Remove now-unused avatar/colors storage path properties
  - Add currentUserProfile query mapping to schema and ProfileResolver